--- a/TCX_-_Associated_Indicator_Operations_App/ui/index.html
+++ b/TCX_-_Associated_Indicator_Operations_App/ui/index.html
@@ -53,7 +53,7 @@
             </div> -->
 
             <div>
-                <textarea id="indicatorsHidden" style="position: absolute; overflow: hidden; clip: rect(0 0 0 0); height: 1px; width: 1px; margin: -1px; padding: 0; border: 0;">{{ indicators.map(x => x['indicator']).join(',') }}</textarea>
+                <textarea id="indicatorsHidden" style="position: absolute; overflow: hidden; clip: rect(0 0 0 0); height: 1px; width: 1px; margin: -1px; padding: 0; border: 0;">{{ indicators.map(x => x['indicator']).join(indicatorDelimiter) }}</textarea>
             </div>
 
             <div class="float-center text-center">
